reorder css files

--- a/editor.html
+++ b/editor.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="editor-styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/editor-styles.css">
     </head>      
 <body>
     <script>
@@ -196,7 +196,7 @@
         <button id="previous-slide">Previous Slide</button>
         <button id="next-slide">Next Slide</button>
         <button id="preview">Preview</button>
-        <button id="back"> <a href="better-main.html">Back</a></button>
+        <button id="back"> <a href="main.html">Back</a></button>
         <button id="new-slide">New Slide</button>    
     </div>
 
