--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="main-styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/main-styles.css">
 </head>
 <body>
     <script>
@@ -25,7 +25,7 @@
                     presentationElement.id = "presentation";
                     
                     var innerLink = document.createElement("a");
-                    innerLink.setAttribute("href", "better-editor.html?presentation=" + presentationData);
+                    innerLink.setAttribute("href", "editor.html?presentation=" + presentationData);
                     innerLink.text = presentationData;
 
                     presentationElement.append(innerLink);
