--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
         function getPresentationsRequest() {
             var xhr = new XMLHttpRequest();
-            xhr.open("GET", "presentations-list.php");
+            xhr.open("GET", "php/presentations-list.php");
             xhr.onload = function () {
                 var data = JSON.parse(this.response);
                 console.log(data);
@@ -39,7 +39,7 @@
 
         function uploadPresentationRequest() {
             var xhr = new XMLHttpRequest();
-            xhr.open("POST", "upload-presentation.php");
+            xhr.open("POST", "php/upload-presentation.php");
 
             let formData = new FormData();
             formData.append("file", document.getElementById("presentationFile").files[0]);
