--- a/editor.html
+++ b/editor.html
@@ -112,13 +112,25 @@
 
             const params = new URLSearchParams();
             params.set("presentation", globalParams.get("presentation"));
-            xhr.params = params;
             
             xhr.onload = function () {
                 var data = JSON.parse(this.response);
-                // TODO
+                function download(filename, text) {
+                    var element = document.createElement('a');
+                    element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+                    element.setAttribute('download', filename);
+
+                    element.style.display = 'none';
+                    document.body.appendChild(element);
+
+                    element.click();
+
+                    document.body.removeChild(element);
+                }
+
+                download(globalParams.get("presentation"), data.presentation);
             }
-            xhr.send();
+            xhr.send(params);
         }
 
         function downloadPresentation() {
